Fix nav bar not visible

--- a/src/components/Nav.module.css
+++ b/src/components/Nav.module.css
@@ -6,13 +6,13 @@
   width: 100%;
   display: flex;
   justify-content: space-between;
-  opacity: 0%;
+  opacity: 0;
   transition: opacity 150ms;
   align-items: center;
 }
 
 .container:hover {
-  opacity: 100%;
+  opacity: 1;
 }
 
 .title {
